[project]
name = "arnold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.1",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "segment-tree>=0.3.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "vizdoom>=1.3.0.dev3",
]
